--- a/gst-plugins-base/po/lv.po
+++ b/gst-plugins-base/po/lv.po
@@ -1,288 +1,294 @@
-# translation of gst-plugins-base-0.10.22.2.po to Turkish
+# Latvian translation of gst-plugins-base
 # This file is put in the public domain.
-# Server Acim <serveracim@gmail.com>, 2009.
+# Arvis Lācis <arvis.lacis@inbox.lv>, 2009.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
 "POT-Creation-Date: 2009-07-30 14:52+0100\n"
-"PO-Revision-Date: 2009-06-20 19:33+0200\n"
-"Last-Translator: Server Acim <serveracim@gmail.com>\n"
-"Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2009-07-30 12:26+0100\n"
+"Last-Translator: Rihards Priedītis <rprieditis@gmail.com>\n"
+"Language-Team: Latvian <translation-team-lv@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Latvian\n"
+"X-Poedit-Country: LATVIA\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : "
+"2);\n"
 
 msgid "Master"
-msgstr "Ana"
+msgstr "Galvenais"
 
 msgid "Bass"
-msgstr "Bas"
+msgstr "Bass"
 
 msgid "Treble"
-msgstr "Tiz"
+msgstr "Diskants"
 
 msgid "PCM"
 msgstr "PCM"
 
 msgid "Synth"
-msgstr "Synthizer"
+msgstr "Sintēze"
 
 msgid "Line-in"
-msgstr "Hat-girişi"
+msgstr "Line-in"
 
 msgid "CD"
 msgstr "CD"
 
 msgid "Microphone"
-msgstr "Mikrofon"
+msgstr "Mikrofons"
 
 msgid "PC Speaker"
-msgstr "PC Hoparlörü"
+msgstr "Datora skaļrunis"
 
 msgid "Playback"
-msgstr "Çalma"
+msgstr "Atskaņošana"
 
 msgid "Capture"
-msgstr "Yakala"
+msgstr "Tveršana"
 
 msgid "Could not open device for playback in mono mode."
-msgstr "Mono kipte çalmak için aygıt açılamıyor."
+msgstr "Nevarēja atvērt ierīci atskaņošanai mono režīmā."
 
 msgid "Could not open device for playback in stereo mode."
-msgstr "Stereo kipte çalmak için aygıt açılamıyor."
+msgstr "Nevarēja atvērt ierīci atskaņošanai stereo režīmā."
 
 #, c-format
 msgid "Could not open device for playback in %d-channel mode."
-msgstr "Aygıtı %d- kanal kipinde çalmak için açamıyor."
+msgstr "Nevarēja atvērt ierīci atskaņošanai %d-kanāla režīmā."
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
 "application."
 msgstr ""
-"Aygıtı çalmak için için açamıyor. Aygıt başka bir uygulama tarafından "
-"kullanılmakta."
+"Nevarēja atvērt audio ierīci atskaņošanai. Ierīci pašlaik izmanto cita "
+"lietotne."
 
 msgid "Could not open audio device for playback."
-msgstr "Aygıtı çalma için açamıyor."
+msgstr "Nevarēja atvērt audio ierīci atskaņošanai."
 
 msgid "Could not open device for recording in mono mode."
-msgstr "Mono kipte kaydetmek için aygıtı açamıyor."
+msgstr "Nevarēja atvērt ierīci ierakstīšanai mono režīmā."
 
 msgid "Could not open device for recording in stereo mode."
-msgstr "Stereo kipte kaydetmek için aygıtı açamıyor."
+msgstr "Nevarēja atvērt ierīci ierakstīšanai stereo režīmā."
 
 #, c-format
 msgid "Could not open device for recording in %d-channel mode"
-msgstr "Aygıtı %d- kanal kipinde kaydetmek için açamıyor"
+msgstr "Nevarēja atvērt ierīci ierakstīšanai %d-kanāla režīmā"
 
 msgid ""
 "Could not open audio device for recording. Device is being used by another "
 "application."
 msgstr ""
-"Aygıtı kaydetmek için açamıyor. Aygıt başka bir uygulama tarafından "
-"kullanılmakta."
+"Nevarēja atvērt audio ierīci ierakstīšanai. Ierīci pašlaik izmanto cita "
+"lietotne."
 
 msgid "Could not open audio device for recording."
-msgstr "Kayıt için ses aygıtı açılamıyor."
+msgstr "Nevarēja atvērt audio ierīci ierakstīšanai."
 
 msgid "Could not open CD device for reading."
-msgstr "Okumak için CD aygıtı açılamıyor."
+msgstr "Nevarēja atvērt CD ierīci lasīšanai."
 
 msgid "Could not seek CD."
-msgstr "CD bulunamıyor."
+msgstr "Nevarēja meklēt pa CD."
 
 msgid "Could not read CD."
-msgstr "CD okunamıyor."
+msgstr "Nevarēja nolasīt CD."
 
 #, c-format
 msgid "Could not open vfs file \"%s\" for writing: %s."
-msgstr "Vfs dosyası \"%s\" yazmak için açılamıyor: %s."
+msgstr "Nevarēja atvērt vfs failu \"%s\" rakstīšanai: %s."
 
 msgid "No filename given"
-msgstr "Dosya adı verilmedi"
+msgstr "Nav norādīts faila nosaukums"
 
 #, c-format
 msgid "Could not close vfs file \"%s\"."
-msgstr "Vfs dosyası kapatılamıyor \"%s\"."
+msgstr "Nevarēja aizvērt vfs failu \"%s\"."
 
 #, c-format
 msgid "Error while writing to file \"%s\"."
-msgstr "Dosyaya yazmada hata \"%s\"."
+msgstr "Kļūda rakstot failā \"%s\"."
 
 msgid "Internal data stream error."
-msgstr "İç veri akışı hatası."
+msgstr "Iekšējās datu plūsmas kļūda."
 
 #, c-format
 msgid "A %s plugin is required to play this stream, but not installed."
-msgstr "Bir %s eklenti bu akışı çalmak için gerekli, fakat kurulu değil."
+msgstr ""
+"Nepieciešamas %s spraudnis, lai atskaņotu šo plūsmu, bet tas nav instalēts."
 
 msgid "This appears to be a text file"
-msgstr "Bu bir metin dosyasına benziyor"
+msgstr "Tiek atpazīts kā teksta fails"
 
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
-msgstr "Geçersiz altyazı adresi \"%s\", altyazılar kaldırıldı."
+msgstr "Nederīgs subtitru URI \"%s\", subtitri izslēgti."
 
 msgid "No URI specified to play from."
-msgstr "Çalmak için bir ağ adresi belirtilmedi."
+msgstr "Nav norādīts neviens URI, no kā varētu spēlēt. "
 
 #, c-format
 msgid "Invalid URI \"%s\"."
-msgstr "Geçersiz URI \"%s\"."
+msgstr "Nederīgs URI \"%s\"."
 
 msgid "RTSP streams cannot be played yet."
-msgstr "RTSP akışları henüz çalınamıyor."
+msgstr "RTSP plūsmas pagaidām nevar tikt atskaņotas."
 
 msgid "Could not create \"decodebin\" element."
-msgstr "\"decodebin\" öğesi oluşturulamıyor."
+msgstr "Nevarēja izveidot \"decodebin\" elementu."
 
 msgid "Source element is invalid."
-msgstr "Kaynak öğesi geçersiz."
+msgstr "Avota elements ir nederīgs."
 
 msgid ""
 "Only a subtitle stream was detected. Either you are loading a subtitle file "
 "or some other type of text file, or the media file was not recognized."
 msgstr ""
-"Bir altyazı dosyası algılandı. Siz ya bir altyazı veya başka bir metin "
-"dosyası yüklemek üzeresiniz, veya çokluortam dosyası tanınamadı."
+"Tika pamanīta tikai subtitru plūsma. Vai nu jūs ielādējat subtitru failu vai "
+"cita veida teksta failu, vai arī mediju fails netika atpazīts."
 
 msgid ""
 "You do not have a decoder installed to handle this file. You might need to "
 "install the necessary plugins."
 msgstr ""
-"Bu yüklü dosyası çözümleyecek bir kod çözücüye sahip değilsiniz. Gerekli "
-"eklentileri kurmak zorundasınız."
+"Jums nav instalēta atkodētāja, lai apietos ar šo failu. Jums iespējams "
+"vajadzētu instalēt nepieciešamos spraudņus."
 
 msgid "This is not a media file"
-msgstr "Bu bir çokluortam dosyası değil."
+msgstr "Šis nav mediju fails"
 
 msgid "A subtitle stream was detected, but no video stream."
-msgstr "Bir altyazı akışı algılanda, ancak vidyo akışı bulunamadı."
+msgstr "Tika pamanīta subtitru plūsma, bet ne video plūsma."
 
 msgid "Both autovideosink and xvimagesink elements are missing."
-msgstr "Autovideosink ve xvimagesink öğelerininin ikisi de kayıp."
+msgstr "Trūkst gan autovideosink, gan xvimagesink elementi."
 
 #, c-format
 msgid "Missing element '%s' - check your GStreamer installation."
-msgstr "Kayıp öğe '%s' - GStreamer kurulumunu denetleyin."
+msgstr "Trūkst elements \"%s\" - pārbaudiet savu GStreamer instalāciju."
 
 msgid "Both autoaudiosink and alsasink elements are missing."
-msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de kayıp."
+msgstr "Trūkst gan autoaudiosink, gan alsasink elementi."
 
 msgid "Both autovideosink and xvimagesink elements are not working."
-msgstr "Autoaudiosink ve xvimagesink öğelerinin ikisi de çalışmıyor."
+msgstr "Gan autovideosink, gan xvimagesink elementi nedarbojas."
 
 msgid "Custom text sink element is not usable."
-msgstr "Varsayılan metin gömme öğesi kullanılamaz durumda."
+msgstr "Pielāgots teksta iegremdēšanas elements nav lietojams."
 
 msgid "No volume control found"
-msgstr "Ses denetimi bulunamadı"
+msgstr "Netika atrasta neviena skaļuma kontrole"
 
 msgid "Both autoaudiosink and alsasink elements are not working."
-msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de çalışmıyor."
+msgstr "Gan autoaudiosink, gan alsasink elementi nedarbojas."
 
 msgid "Can't play a text file without video."
-msgstr "Vidyo olmadan metin dosyasını oynatamaz."
+msgstr "Nevar atskaņot teksta failu bez video."
 
 msgid "Can't play a text subtitles and subpictures."
-msgstr "Metin altyazılarını altgörüntülerini oynatamaz."
+msgstr "Nevar atskaņot teksta subtitrus un subattēlus."
 
 #, fuzzy
 msgid "No Temp directory specified."
-msgstr "Aygıt belirtilmedi."
+msgstr "Nav norādīta ierīce."
 
 #, fuzzy, c-format
 msgid "Could not create temp file \"%s\"."
-msgstr "Vfs dosyası kapatılamıyor \"%s\"."
+msgstr "Nevarēja aizvērt vfs failu \"%s\"."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
-msgstr "Dosyayı \"%s\" okumak için açamıyor."
+msgstr "Nav iespējams atvērt failu \"%s\" lasīšanai."
 
 #, c-format
 msgid "No decoder available for type '%s'."
-msgstr "Şu tür '%s' için kod çözücü bulunamadı."
+msgstr "Nav pieejams neviens atkodētājs failu veidam \"%s\"."
 
 msgid "This stream type cannot be played yet."
-msgstr "Bu akış türü henüz çalınamıyor."
+msgstr "Šī plūsma pagaidām nevar tikt atskaņota."
 
 #, c-format
 msgid "No URI handler implemented for \"%s\"."
-msgstr "Hiç bir URI bağlantısı sağlanmadı \"%s\"."
+msgstr "Nav izstrādāts neviens URI apstrādātājs priekš \"%s\"."
 
 msgid "Could not create \"decodebin2\" element."
-msgstr "Bir \"decodebin2\" öğesi oluşturamıyor."
+msgstr "Nav iespējams izveidot \"decodebin2\" elementu."
 
 msgid "Could not create \"queue2\" element."
-msgstr "Bir \"queue2\" öğesi oluşturamıyor."
+msgstr "Nav iespējams izveidot  \"queue2\" elementu."
 
 msgid "Could not create \"typefind\" element."
-msgstr "Bir \"typefind\" öğesi oluşturamıyor."
+msgstr "Nav iespējams izveidot \"typefind\" elementu."
 
 #, c-format
 msgid "Error while sending data to \"%s:%d\"."
-msgstr "Dosyayı şuraya gönderirken hata \"%s:%d\"."
+msgstr "Radās kļūda nosūtot datus uz \"%s:%d\"."
 
 #, c-format
 msgid "Error while sending gdp header data to \"%s:%d\"."
-msgstr "Bir gdp başlık verisini şuraya gönderirken hata \"%s:%d\"."
+msgstr "Radās kļūda nosūtot gdb galvenas datus uz \"%s:%d\"."
 
 #, c-format
 msgid "Error while sending gdp payload data to \"%s:%d\"."
-msgstr "Bir gdp verisini şuraya gönderirken hata \"%s:%d\"."
+msgstr "Kļūda sūtot gdp iekrāvēja datus uz \"%s:%d\""
 
 #, c-format
 msgid "Connection to %s:%d refused."
-msgstr "Şuraya bağlantı %s:%d reddedildi."
+msgstr "Savienojums ar %s:%d noraidīts."
 
 msgid "Can't record audio fast enough"
-msgstr "Sesi yeterince hızlı kaydedemiyor"
+msgstr "Nevar ierakstīt audio pietiekami ātri"
 
 msgid "Failed to read tag: not enough data"
-msgstr "Etiketi okunamadı: yetersiz veri"
+msgstr "Neizdevās nolasīt atzīmi: nepietiek datu"
 
 msgid "track ID"
-msgstr "iz BAŞLIĞI"
+msgstr "celiņa ID"
 
 msgid "MusicBrainz track ID"
-msgstr "MusicBrainz iz BAŞLIĞI ID"
+msgstr "MusicBrainz celiņa ID"
 
 msgid "artist ID"
-msgstr "sanatçı BAŞLIĞI"
+msgstr "izpildītāja ID"
 
 msgid "MusicBrainz artist ID"
-msgstr "MusicBrainz sanatçı BAŞLIĞI ID"
+msgstr "MusicBrainz izpildītāja ID"
 
 msgid "album ID"
-msgstr "albüm BAŞLIĞI"
+msgstr "albuma ID"
 
 msgid "MusicBrainz album ID"
-msgstr "MusicBrainz albümü BAŞLIĞI"
+msgstr "MusicBrainz albuma ID"
 
 msgid "album artist ID"
-msgstr "albüm sanatçısı BAŞLIĞI"
+msgstr "albuma izpildītāja ID"
 
 msgid "MusicBrainz album artist ID"
-msgstr "MusicBrainz albüm sanatçısı BAŞLIĞI"
+msgstr "MusicBrainz albuma izpildītāja ID"
 
 msgid "track TRM ID"
-msgstr "iz TRM BAŞLIĞI"
+msgstr "celiņa TRM ID"
 
 msgid "MusicBrainz TRM ID"
-msgstr "MusicBrainz TRM BAŞLIĞI"
+msgstr "MusicBrainz TRM ID"
 
 msgid "This CD has no audio tracks"
-msgstr "Bu CD hiç ses izi içermiyor"
+msgstr "Šajā CD nav neviena audio celiņa"
 
 msgid "ID3 tag"
-msgstr "ID3 etiketi"
+msgstr "ID3 atzīme"
 
 msgid "APE tag"
-msgstr "APE etiketi"
+msgstr "APE atzīme"
 
 msgid "ICY internet radio"
-msgstr "ICY internet radyosu"
+msgstr "ICY interneta radio"
 
 msgid "Apple Lossless Audio (ALAC)"
 msgstr "Apple Lossless Audio (ALAC)"
@@ -291,182 +297,182 @@ msgid "Free Lossless Audio Codec (FLAC)"
 msgstr "Free Lossless Audio Codec (FLAC)"
 
 msgid "Lossless True Audio (TTA)"
-msgstr "Lossless True Audio (TTA)"
+msgstr "Bez zudumu True Audio (TTA)"
 
 msgid "Windows Media Speech"
-msgstr "Windows Media Hecelemesi"
+msgstr "Windows mediju runa"
 
 msgid "CYUV Lossless"
-msgstr "CYUV Kayıpsız"
+msgstr "CYUV bez zudumu"
 
 msgid "FFMpeg v1"
 msgstr "FFMpeg v1"
 
 msgid "Lossless MSZH"
-msgstr "Kayıpsız MSZH"
+msgstr "Bez zudumu MSZH"
 
 msgid "Uncompressed Gray Image"
-msgstr "Sıkıştırılmamış Gri Resim"
+msgstr "Neatspiests Pelēks attēls"
 
 msgid "Run-length encoding"
-msgstr "Çalıştırma-uzunluğu kodlaması"
+msgstr "Sērijas garuma kodēšana"
 
 msgid "Sami subtitle format"
-msgstr "Sami altyazı kipi"
+msgstr "Sami subtitru formāts"
 
 msgid "TMPlayer subtitle format"
-msgstr "TMPlayer altyazı kipi"
+msgstr "TMPlayer subtitru formāts"
 
 msgid "Kate subtitle format"
-msgstr "Kate altyazı kipi"
+msgstr "Kate subtitru formāts"
 
 msgid "Uncompressed planar YUV 4:2:0"
-msgstr "Sıkıştırılmamış planar YUV 4:2:0"
+msgstr "Nesaspiesta plakne YUV 4:2:0"
 
 msgid "Uncompressed planar YVU 4:2:0"
-msgstr "Sıkıştırılmamış planar YVU 4:2:0"
+msgstr "Nesaspiesta plakne YVU 4:2:0"
 
 msgid "Uncompressed packed YUV 4:2:2"
-msgstr "Sıkıştırılmamış paket YUV 4:2:2"
+msgstr "Nesaspiests pakots YUV 4:2:2"
 
 msgid "Uncompressed packed YUV 4:1:0"
-msgstr "Sıkıştırılmamış paket YUV 4:1:0"
+msgstr "Nesaspiests pakots YUP 4:1:0"
 
 msgid "Uncompressed packed YVU 4:1:0"
-msgstr "Sıkıştırılmamış paket YVU 4:1:0"
+msgstr "Nesaspiests pakots YVU 4:1:0"
 
 msgid "Uncompressed packed YUV 4:1:1"
-msgstr "Sıkıştırılmamış paket YUV 4:1:1"
+msgstr "Nesaspiests pakots YUV 4:1:1"
 
 msgid "Uncompressed packed YUV 4:4:4"
-msgstr "Sıkıştırılmamış paket YUV 4:4:4"
+msgstr "Nesaspiests pakots YUV 4:4:4"
 
 msgid "Uncompressed planar YUV 4:2:2"
-msgstr "Sıkıştırılmamış planar YUV 4:2:2"
+msgstr "Nesaspiesta plakne YUV 4:2:2"
 
 msgid "Uncompressed planar YUV 4:1:1"
-msgstr "Sıkıştırılmamış planar YUV 4:1:1"
+msgstr "Nesaspiesta plakne YUV 4:1:1"
 
 msgid "Uncompressed black and white Y-plane"
-msgstr "Sıkıştırılmamış siyah ve beyaz Y"
+msgstr "Nesaspiests melnbaltais Y-plakne"
 
 msgid "Uncompressed YUV"
-msgstr "Sıkıştırılmamış YUV"
+msgstr "Nesaspiests YUV"
 
 #, c-format
 msgid "Uncompressed palettized %d-bit %s"
-msgstr "Şıkıştırılmamış seviyesi şuna düşürülmüş %d-bit %s"
+msgstr "Nesaspiests paletizēts %d-bitu %s"
 
 #, c-format
 msgid "DivX MPEG-4 Version %d"
-msgstr "DivX MPEG-4 Versiyonu %d"
+msgstr "DivX MPEG-4 versija %d"
 
 #, c-format
 msgid "Raw %d-bit PCM audio"
-msgstr "Ham %d-bit PCM ses"
+msgstr "Jēls %d-bitu PCM audio"
 
 msgid "Raw PCM audio"
-msgstr "Ham PCM ses"
+msgstr "Jēls PCM audio"
 
 #, c-format
 msgid "Raw %d-bit floating-point audio"
-msgstr "Ham %d-bit yüzer-noktalı ses"
+msgstr "Jēls %d-bitu plūstošā punkta audio"
 
 msgid "Raw floating-point audio"
-msgstr "Ham yüzer-noktalı ses"
+msgstr "Jēls plūstošā punkta audio"
 
 msgid "Audio CD source"
-msgstr "Ses CD'si kaynağı"
+msgstr "Audio CD avots"
 
 msgid "DVD source"
-msgstr "DVD kaynağı"
+msgstr "DVD avots"
 
 msgid "Real Time Streaming Protocol (RTSP) source"
-msgstr "Gerçek Zamanlı Akış Protokolu (RTSP) kaynağı"
+msgstr "Tiešās straumēšanas protokola (RTSP) avots"
 
 msgid "Microsoft Media Server (MMS) protocol source"
-msgstr "Microsoft Medya Sunucusu (MMS) protokol kaynağı"
+msgstr "Microsoft Mediju Servera (MMS) protokola avots"
 
 #, c-format
 msgid "%s protocol source"
-msgstr "%s protokol kaynağı"
+msgstr "%s protokola avots"
 
 #, c-format
 msgid "%s video RTP depayloader"
-msgstr "%s video RTP depayloader"
+msgstr "%s video RTP izkrāvējs"
 
 #, c-format
 msgid "%s audio RTP depayloader"
-msgstr "%s audio RTP depayloader"
+msgstr "%s audio RTP izskrāvējs"
 
 #, c-format
 msgid "%s RTP depayloader"
-msgstr "%s RTP depayloader"
+msgstr "%s RTP izkrāvējs"
 
 #, c-format
 msgid "%s demuxer"
-msgstr "%s demuxer"
+msgstr "%s atjaucējs"
 
 #, c-format
 msgid "%s decoder"
-msgstr "%s kod çözücü"
+msgstr "%s atkodētājs"
 
 #, c-format
 msgid "%s video RTP payloader"
-msgstr "%s video RTP payloader"
+msgstr "%s video RTP iekrāvējs"
 
 #, c-format
 msgid "%s audio RTP payloader"
-msgstr "%s audio RTP payloader"
+msgstr "%s audio RTP iekrāvējs"
 
 #, c-format
 msgid "%s RTP payloader"
-msgstr "%s RTP payloader"
+msgstr "%s RTP iekrāvējs"
 
 #, c-format
 msgid "%s muxer"
-msgstr "%s muxer"
+msgstr "%s jaucējs"
 
 #, c-format
 msgid "%s encoder"
-msgstr "%s kodlayıcı"
+msgstr "%s kodētājs"
 
 #, c-format
 msgid "GStreamer element %s"
-msgstr "GStreamer öğesi %s"
+msgstr "GStreamer elements %s"
 
 msgid "Unknown source element"
-msgstr "Bilinmeyen kaynak öğesi"
+msgstr "Nezināms avota elements"
 
 msgid "Unknown sink element"
-msgstr "Bilinmeyen gömme öğesi"
+msgstr "Nezināms iegremdēšanas elements"
 
 msgid "Unknown element"
-msgstr "Bilinmeyen öğe"
+msgstr "Nezināms elements"
 
 msgid "Unknown decoder element"
-msgstr "Bilinmeyen kod çözücü öğesi"
+msgstr "Nezināms atkodētāja elements"
 
 msgid "Unknown encoder element"
-msgstr "Bilinmeyen kodlama öğesi"
+msgstr "Nezināms kodētāja elements"
 
 msgid "Plugin or element of unknown type"
-msgstr "Bilinmeyen türde eklenti veya öğe"
+msgstr "Nezināma veida spraudnis vai elements"
 
 msgid "No device specified."
-msgstr "Aygıt belirtilmedi."
+msgstr "Nav norādīta ierīce."
 
 #, c-format
 msgid "Device \"%s\" does not exist."
-msgstr "Aygıt \"%s\" bulunamadı."
+msgstr "Ierīce \"%s\" neeksistē."
 
 #, c-format
 msgid "Device \"%s\" is already being used."
-msgstr "Aygıt \"%s\" zaten kullanımda."
+msgstr "Ierīce \"%s\" jau tiek izmantota."
 
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
-msgstr "Şu aygıtı\"%s\" for okuma veya yazma için açamıyor."
+msgstr "Nevarēja atvērt ierīci \"%s\" lasīšanai vai rakstīšanai."
 
 #~ msgid "No file name specified."
-#~ msgstr "Dosya adı belirtilmedi."
+#~ msgstr "Nav norādīts faila nosaukums."
