--- a/gst-plugins-base/po/sq.po
+++ b/gst-plugins-base/po/sq.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.8.3\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-11-23 16:23+0100\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
+"POT-Creation-Date: 2009-07-30 14:52+0100\n"
 "PO-Revision-Date: 2004-08-07 20:29+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <begraj@hotmail.com>\n"
@@ -14,127 +14,464 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ext/alsa/gstalsamixertrack.c:83
 msgid "Master"
 msgstr ""
 
-#: ext/alsa/gstalsamixertrack.c:84
 msgid "Bass"
 msgstr "Bas"
 
-#: ext/alsa/gstalsamixertrack.c:85
 msgid "Treble"
 msgstr "Treble"
 
-#: ext/alsa/gstalsamixertrack.c:86
 msgid "PCM"
 msgstr "PCM"
 
-#: ext/alsa/gstalsamixertrack.c:87
 msgid "Synth"
 msgstr "Sintetizuesi"
 
-#: ext/alsa/gstalsamixertrack.c:88
 msgid "Line-in"
 msgstr "Linja-hyrje"
 
-#: ext/alsa/gstalsamixertrack.c:89
 msgid "CD"
 msgstr "CD"
 
-#: ext/alsa/gstalsamixertrack.c:90
 msgid "Microphone"
 msgstr "Mikrofoni"
 
-#: ext/alsa/gstalsamixertrack.c:91
 #, fuzzy
 msgid "PC Speaker"
 msgstr "Zë folës"
 
-#: ext/alsa/gstalsamixertrack.c:92
 msgid "Playback"
 msgstr ""
 
-#: ext/alsa/gstalsamixertrack.c:93
 msgid "Capture"
 msgstr ""
 
-#: ext/cdparanoia/gstcdparanoia.c:279
-msgid "discid"
+#, fuzzy
+msgid "Could not open device for playback in mono mode."
+msgstr "I pamundur hapja e dispozitivit CD për lexim."
+
+#, fuzzy
+msgid "Could not open device for playback in stereo mode."
+msgstr "I pamundur hapja e dispozitivit CD për lexim."
+
+#, fuzzy, c-format
+msgid "Could not open device for playback in %d-channel mode."
+msgstr "I pamundur hapja e dispozitivit CD për lexim."
+
+msgid ""
+"Could not open audio device for playback. Device is being used by another "
+"application."
 msgstr ""
 
-#: ext/cdparanoia/gstcdparanoia.c:279
-msgid "CDDA discid for metadata retrieval"
-msgstr ""
+#, fuzzy
+msgid "Could not open audio device for playback."
+msgstr "E pamundur hapja e dispozitivit të zërit \"%s\" për shkrim."
 
-#: ext/cdparanoia/gstcdparanoia.c:683 ext/cdparanoia/gstcdparanoia.c:699
+#, fuzzy
+msgid "Could not open device for recording in mono mode."
+msgstr "I pamundur hapja e dispozitivit CD për lexim."
+
+#, fuzzy
+msgid "Could not open device for recording in stereo mode."
+msgstr "I pamundur hapja e dispozitivit CD për lexim."
+
+#, fuzzy, c-format
+msgid "Could not open device for recording in %d-channel mode"
+msgstr "I pamundur hapja e dispozitivit CD për lexim."
+
+#, fuzzy
+msgid ""
+"Could not open audio device for recording. Device is being used by another "
+"application."
+msgstr "E pamundur hapja e dispozitivit \"%s\" për lexim dhe shkrim."
+
+#, fuzzy
+msgid "Could not open audio device for recording."
+msgstr "I pamundur hapja e dispozitivit CD për lexim."
+
 msgid "Could not open CD device for reading."
 msgstr "I pamundur hapja e dispozitivit CD për lexim."
 
-#: ext/gnomevfs/gstgnomevfssink.c:431
+#, fuzzy
+msgid "Could not seek CD."
+msgstr "E pamundur mbyllja e file vfs \"%s\"."
+
+#, fuzzy
+msgid "Could not read CD."
+msgstr "I pamundur shkrimi në dispozitivin \"%s\"."
+
 #, c-format
 msgid "Could not open vfs file \"%s\" for writing: %s."
 msgstr "E pamundur hapja e file vfs \"%s\" për shkrim: %s."
 
-#: ext/gnomevfs/gstgnomevfssink.c:438
 msgid "No filename given"
 msgstr "Nuk është dhënë asnjë emër file"
 
-#: ext/gnomevfs/gstgnomevfssink.c:466
 #, c-format
 msgid "Could not close vfs file \"%s\"."
 msgstr "E pamundur mbyllja e file vfs \"%s\"."
 
-#: ext/ogg/gstoggdemux.c:2454
+#, fuzzy, c-format
+msgid "Error while writing to file \"%s\"."
+msgstr "Gabim gjatë mbylljes së file \"%s\"."
+
 msgid "Internal data stream error."
 msgstr ""
 
-#: gst/playback/gstplaybasebin.c:1331
+#, c-format
+msgid "A %s plugin is required to play this stream, but not installed."
+msgstr ""
+
+msgid "This appears to be a text file"
+msgstr ""
+
+#, c-format
+msgid "Invalid subtitle URI \"%s\", subtitles disabled."
+msgstr ""
+
 msgid "No URI specified to play from."
 msgstr ""
 
-#: gst/playback/gstplaybasebin.c:1337
-#, c-format
-msgid "No URI handler implemented for \"%s\"."
-msgstr ""
-
-#: gst/playback/gstplaybasebin.c:1341
 #, c-format
 msgid "Invalid URI \"%s\"."
 msgstr ""
 
-#: gst/playback/gstplaybasebin.c:1348
+msgid "RTSP streams cannot be played yet."
+msgstr ""
+
 msgid "Could not create \"decodebin\" element."
 msgstr ""
 
-#: gst/playback/gstplaybasebin.c:1414
-#, c-format
+msgid "Source element is invalid."
+msgstr ""
+
 msgid ""
-"You do not have a decoder installed to handle \"%s\".  You might need to "
+"Only a subtitle stream was detected. Either you are loading a subtitle file "
+"or some other type of text file, or the media file was not recognized."
+msgstr ""
+
+msgid ""
+"You do not have a decoder installed to handle this file. You might need to "
 "install the necessary plugins."
 msgstr ""
 
-#: gst/playback/gstplaybasebin.c:1417
-#, fuzzy, c-format
-msgid "\"%s\" is not a media file"
+#, fuzzy
+msgid "This is not a media file"
 msgstr "Dispozitivi \"%s\" nuk është një dispozitiv marrje."
 
-#: gst/playback/gstplaybin.c:411
+msgid "A subtitle stream was detected, but no video stream."
+msgstr ""
+
 msgid "Both autovideosink and xvimagesink elements are missing."
 msgstr ""
 
-#: gst/playback/gstplaybin.c:541
+#, c-format
+msgid "Missing element '%s' - check your GStreamer installation."
+msgstr ""
+
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr ""
 
-#~ msgid "No device specified."
-#~ msgstr "Nuk është përcaktuar asnjë dispozitiv."
+msgid "Both autovideosink and xvimagesink elements are not working."
+msgstr ""
 
-#~ msgid "Device \"%s\" does not exist."
-#~ msgstr "Dispozitivi \"%s\" nuk ekziston."
+msgid "Custom text sink element is not usable."
+msgstr ""
 
-#~ msgid "Could not open device \"%s\" for reading and writing."
-#~ msgstr "E pamundur hapja e dispozitivit \"%s\" për lexim dhe shkrim."
+msgid "No volume control found"
+msgstr ""
+
+msgid "Both autoaudiosink and alsasink elements are not working."
+msgstr ""
+
+msgid "Can't play a text file without video."
+msgstr ""
+
+msgid "Can't play a text subtitles and subpictures."
+msgstr ""
+
+#, fuzzy
+msgid "No Temp directory specified."
+msgstr "Nuk është përcaktuar asnjë dispozitiv."
+
+#, fuzzy, c-format
+msgid "Could not create temp file \"%s\"."
+msgstr "I pamundur shkrimi tek file \"%s\"."
+
+#, c-format
+msgid "Could not open file \"%s\" for reading."
+msgstr "E pamundur hapja e file \"%s\" për lexim."
+
+#, c-format
+msgid "No decoder available for type '%s'."
+msgstr ""
+
+msgid "This stream type cannot be played yet."
+msgstr ""
+
+#, c-format
+msgid "No URI handler implemented for \"%s\"."
+msgstr ""
+
+msgid "Could not create \"decodebin2\" element."
+msgstr ""
+
+msgid "Could not create \"queue2\" element."
+msgstr ""
+
+#, fuzzy
+msgid "Could not create \"typefind\" element."
+msgstr "I pamundur shkrimi tek file \"%s\"."
+
+#, fuzzy, c-format
+msgid "Error while sending data to \"%s:%d\"."
+msgstr "Gabim gjatë mbylljes së file \"%s\"."
+
+#, c-format
+msgid "Error while sending gdp header data to \"%s:%d\"."
+msgstr ""
+
+#, c-format
+msgid "Error while sending gdp payload data to \"%s:%d\"."
+msgstr ""
+
+#, c-format
+msgid "Connection to %s:%d refused."
+msgstr ""
+
+msgid "Can't record audio fast enough"
+msgstr ""
+
+msgid "Failed to read tag: not enough data"
+msgstr ""
+
+msgid "track ID"
+msgstr ""
+
+msgid "MusicBrainz track ID"
+msgstr ""
+
+msgid "artist ID"
+msgstr ""
+
+msgid "MusicBrainz artist ID"
+msgstr ""
+
+msgid "album ID"
+msgstr ""
+
+msgid "MusicBrainz album ID"
+msgstr ""
+
+msgid "album artist ID"
+msgstr ""
+
+msgid "MusicBrainz album artist ID"
+msgstr ""
+
+msgid "track TRM ID"
+msgstr ""
+
+msgid "MusicBrainz TRM ID"
+msgstr ""
+
+msgid "This CD has no audio tracks"
+msgstr ""
+
+msgid "ID3 tag"
+msgstr ""
+
+msgid "APE tag"
+msgstr ""
+
+msgid "ICY internet radio"
+msgstr ""
+
+msgid "Apple Lossless Audio (ALAC)"
+msgstr ""
+
+msgid "Free Lossless Audio Codec (FLAC)"
+msgstr ""
+
+msgid "Lossless True Audio (TTA)"
+msgstr ""
+
+msgid "Windows Media Speech"
+msgstr ""
+
+msgid "CYUV Lossless"
+msgstr ""
+
+msgid "FFMpeg v1"
+msgstr ""
+
+msgid "Lossless MSZH"
+msgstr ""
+
+msgid "Uncompressed Gray Image"
+msgstr ""
+
+msgid "Run-length encoding"
+msgstr ""
+
+msgid "Sami subtitle format"
+msgstr ""
+
+msgid "TMPlayer subtitle format"
+msgstr ""
+
+msgid "Kate subtitle format"
+msgstr ""
+
+msgid "Uncompressed planar YUV 4:2:0"
+msgstr ""
+
+msgid "Uncompressed planar YVU 4:2:0"
+msgstr ""
+
+msgid "Uncompressed packed YUV 4:2:2"
+msgstr ""
+
+msgid "Uncompressed packed YUV 4:1:0"
+msgstr ""
+
+msgid "Uncompressed packed YVU 4:1:0"
+msgstr ""
+
+msgid "Uncompressed packed YUV 4:1:1"
+msgstr ""
+
+msgid "Uncompressed packed YUV 4:4:4"
+msgstr ""
+
+msgid "Uncompressed planar YUV 4:2:2"
+msgstr ""
+
+msgid "Uncompressed planar YUV 4:1:1"
+msgstr ""
+
+msgid "Uncompressed black and white Y-plane"
+msgstr ""
+
+msgid "Uncompressed YUV"
+msgstr ""
+
+#, c-format
+msgid "Uncompressed palettized %d-bit %s"
+msgstr ""
+
+#, c-format
+msgid "DivX MPEG-4 Version %d"
+msgstr ""
+
+#, c-format
+msgid "Raw %d-bit PCM audio"
+msgstr ""
+
+msgid "Raw PCM audio"
+msgstr ""
+
+#, c-format
+msgid "Raw %d-bit floating-point audio"
+msgstr ""
+
+msgid "Raw floating-point audio"
+msgstr ""
+
+msgid "Audio CD source"
+msgstr ""
+
+msgid "DVD source"
+msgstr ""
+
+msgid "Real Time Streaming Protocol (RTSP) source"
+msgstr ""
+
+msgid "Microsoft Media Server (MMS) protocol source"
+msgstr ""
+
+#, c-format
+msgid "%s protocol source"
+msgstr ""
+
+#, c-format
+msgid "%s video RTP depayloader"
+msgstr ""
+
+#, c-format
+msgid "%s audio RTP depayloader"
+msgstr ""
+
+#, c-format
+msgid "%s RTP depayloader"
+msgstr ""
+
+#, c-format
+msgid "%s demuxer"
+msgstr ""
+
+#, c-format
+msgid "%s decoder"
+msgstr ""
+
+#, c-format
+msgid "%s video RTP payloader"
+msgstr ""
+
+#, c-format
+msgid "%s audio RTP payloader"
+msgstr ""
+
+#, c-format
+msgid "%s RTP payloader"
+msgstr ""
+
+#, c-format
+msgid "%s muxer"
+msgstr ""
+
+#, c-format
+msgid "%s encoder"
+msgstr ""
+
+#, c-format
+msgid "GStreamer element %s"
+msgstr ""
+
+msgid "Unknown source element"
+msgstr ""
+
+msgid "Unknown sink element"
+msgstr ""
+
+msgid "Unknown element"
+msgstr ""
+
+msgid "Unknown decoder element"
+msgstr ""
+
+msgid "Unknown encoder element"
+msgstr ""
+
+msgid "Plugin or element of unknown type"
+msgstr ""
+
+msgid "No device specified."
+msgstr "Nuk është përcaktuar asnjë dispozitiv."
+
+#, c-format
+msgid "Device \"%s\" does not exist."
+msgstr "Dispozitivi \"%s\" nuk ekziston."
+
+#, fuzzy, c-format
+msgid "Device \"%s\" is already being used."
+msgstr "Dispozitivi OSS \"%s\" është duke u përdorur nga një tjetër program."
+
+#, c-format
+msgid "Could not open device \"%s\" for reading and writing."
+msgstr "E pamundur hapja e dispozitivit \"%s\" për lexim dhe shkrim."
 
 #~ msgid "Device is not open."
 #~ msgstr "Dispozitivi nuk është hapur."
@@ -152,17 +489,8 @@ msgstr ""
 #~ msgid "Could not open file \"%s\" for writing."
 #~ msgstr "E pamundur hapja e file \"%s\" në shkrim."
 
-#~ msgid "Error closing file \"%s\"."
-#~ msgstr "Gabim gjatë mbylljes së file \"%s\"."
-
-#~ msgid "Could not open file \"%s\" for reading."
-#~ msgstr "E pamundur hapja e file \"%s\" për lexim."
-
 #~ msgid "No filename specified."
 #~ msgstr "Nuk është përcaktuar emri i file."
-
-#~ msgid "Could not write to file \"%s\"."
-#~ msgstr "I pamundur shkrimi tek file \"%s\"."
 
 #~ msgid "No or invalid input audio, AVI stream will be corrupt."
 #~ msgstr "Input audio i gabuar ose mungon, stream AVI mund të jetë i dëmtuar."
@@ -182,9 +510,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Nuk arrin të gjehet asnjë element ngjyra e hapësirës.\n"
 #~ "Ju lutem instaloni një dhe rinisni."
-
-#~ msgid "Could not open audio device \"%s\" for writing."
-#~ msgstr "E pamundur hapja e dispozitivit të zërit \"%s\" për shkrim."
 
 #~ msgid "Could not open control device \"%s\" for writing."
 #~ msgstr "E pamundur hapja e dispozitivit të kontrollit \"%s\" për shkrim."
@@ -206,13 +531,6 @@ msgstr ""
 
 #~ msgid "Could not close video device \"%s\"."
 #~ msgstr "E pamundur mbyllja e dispozitivit video \"%s\"."
-
-#~ msgid "Could not write to device \"%s\"."
-#~ msgstr "I pamundur shkrimi në dispozitivin \"%s\"."
-
-#~ msgid "OSS device \"%s\" is already in use by another program."
-#~ msgstr ""
-#~ "Dispozitivi OSS \"%s\" është duke u përdorur nga një tjetër program."
 
 #~ msgid "Could not access device \"%s\", check its permissions."
 #~ msgstr ""
