--- a/gst-plugins-base/po/uk.po
+++ b/gst-plugins-base/po/uk.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.14\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-26 21:49+0200\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
+"POT-Creation-Date: 2009-07-30 14:52+0100\n"
 "PO-Revision-Date: 2007-09-07 15:40+0200\n"
 "Last-Translator: Maxim V. Dziumanenko <dziumanenko@gmail.com>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
@@ -15,520 +15,471 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ext/alsa/gstalsamixertrack.c:131
 msgid "Master"
 msgstr "Головний"
 
-#: ext/alsa/gstalsamixertrack.c:132
 msgid "Bass"
 msgstr "Низькі"
 
-#: ext/alsa/gstalsamixertrack.c:133
 msgid "Treble"
 msgstr "Високі"
 
-#: ext/alsa/gstalsamixertrack.c:134
 msgid "PCM"
 msgstr "КІМ"
 
-#: ext/alsa/gstalsamixertrack.c:135
 msgid "Synth"
 msgstr "Синтезатор"
 
-#: ext/alsa/gstalsamixertrack.c:136
 msgid "Line-in"
 msgstr "Лінійний вхід"
 
-#: ext/alsa/gstalsamixertrack.c:137
 msgid "CD"
 msgstr "Компакт-диск"
 
-#: ext/alsa/gstalsamixertrack.c:138
 msgid "Microphone"
 msgstr "Мікрофон"
 
-#: ext/alsa/gstalsamixertrack.c:139
 msgid "PC Speaker"
 msgstr "Гучномовець"
 
-#: ext/alsa/gstalsamixertrack.c:140
 msgid "Playback"
 msgstr "Відтворення"
 
-#: ext/alsa/gstalsamixertrack.c:141 ext/alsa/gstalsamixertrack.c:204
-#: ext/alsa/gstalsamixertrack.c:207
 msgid "Capture"
 msgstr "Запис"
 
-#: ext/alsa/gstalsasink.c:441
 msgid "Could not open device for playback in mono mode."
 msgstr "Не вдається відкрити пристрій відтворення у режимі моно."
 
-#: ext/alsa/gstalsasink.c:443
 msgid "Could not open device for playback in stereo mode."
 msgstr "Не вдається відкрити пристрій відтворення у режимі стерео."
 
-#: ext/alsa/gstalsasink.c:447
 #, c-format
 msgid "Could not open device for playback in %d-channel mode."
 msgstr "Не вдається відкрити пристрій відтворення у %d канальному режимі."
 
-#: ext/alsa/gstalsasrc.c:406
+#, fuzzy
+msgid ""
+"Could not open audio device for playback. Device is being used by another "
+"application."
+msgstr "Не вдається відкрити пристрій відтворення у режимі стерео."
+
+#, fuzzy
+msgid "Could not open audio device for playback."
+msgstr "Не вдається відкрити пристрій відтворення у режимі моно."
+
 msgid "Could not open device for recording in mono mode."
 msgstr "Не вдається відкрити пристрій запису у режимі моно."
 
-#: ext/alsa/gstalsasrc.c:408
 msgid "Could not open device for recording in stereo mode."
 msgstr "Не вдається відкрити пристрій запису у режимі стерео."
 
-#: ext/alsa/gstalsasrc.c:412
 #, c-format
 msgid "Could not open device for recording in %d-channel mode"
 msgstr "Не вдається відкрити пристрій запису у %d-канальному режимі."
 
-#: ext/cdparanoia/gstcdparanoiasrc.c:240 ext/cdparanoia/gstcdparanoiasrc.c:246
+#, fuzzy
+msgid ""
+"Could not open audio device for recording. Device is being used by another "
+"application."
+msgstr "Не вдається відкрити пристрій запису у режимі стерео."
+
+#, fuzzy
+msgid "Could not open audio device for recording."
+msgstr "Не вдається відкрити пристрій компакт-дисків для читання."
+
 msgid "Could not open CD device for reading."
 msgstr "Не вдається відкрити пристрій компакт-дисків для читання."
 
-#: ext/cdparanoia/gstcdparanoiasrc.c:372
 msgid "Could not seek CD."
 msgstr "Не вдається встановити позицію на CD."
 
-#: ext/cdparanoia/gstcdparanoiasrc.c:380
 msgid "Could not read CD."
 msgstr "Не вдається прочитати CD."
 
-#: ext/gnomevfs/gstgnomevfssink.c:387
 #, c-format
 msgid "Could not open vfs file \"%s\" for writing: %s."
-msgstr "Не вдається відкрити файл віртуальної файлової системи \"%s\" для запису: %s."
+msgstr ""
+"Не вдається відкрити файл віртуальної файлової системи \"%s\" для запису: %s."
 
-#: ext/gnomevfs/gstgnomevfssink.c:394
 msgid "No filename given"
 msgstr "Не вказано файл"
 
-#: ext/gnomevfs/gstgnomevfssink.c:420
 #, c-format
 msgid "Could not close vfs file \"%s\"."
 msgstr "Не вдається закрити файл віртуальної файлової системи \"%s\"."
 
-#: ext/gnomevfs/gstgnomevfssink.c:572
 #, c-format
 msgid "Error while writing to file \"%s\"."
 msgstr "Помилка при записі у файл \"%s\"."
 
-#: ext/ogg/gstoggdemux.c:3095
 msgid "Internal data stream error."
 msgstr "Помилка внутрішнього потоку даних."
 
-#: gst/playback/gstdecodebin.c:1552
-msgid "This appears to be a text file"
-msgstr "Файл схожий на текстовий файл"
-
-#: gst/playback/gstplaybasebin.c:1460
-#, c-format
-msgid "Invalid subtitle URI \"%s\", subtitles disabled."
-msgstr "Неправильний URI субтитру \"%s\", субтитри вимкнено."
-
-#: gst/playback/gstplaybasebin.c:1477 gst/playback/gstplaybasebin.c:1603
 #, c-format
 msgid "A %s plugin is required to play this stream, but not installed."
 msgstr "Для відтворення потоку потрібен модуль %s, але він не встановлений."
 
-#: gst/playback/gstplaybasebin.c:1573 gst/playback/gsturidecodebin.c:378
+msgid "This appears to be a text file"
+msgstr "Файл схожий на текстовий файл"
+
+#, c-format
+msgid "Invalid subtitle URI \"%s\", subtitles disabled."
+msgstr "Неправильний URI субтитру \"%s\", субтитри вимкнено."
+
 msgid "No URI specified to play from."
 msgstr "Не вказано URI для відтворення."
 
-#: gst/playback/gstplaybasebin.c:1579 gst/playback/gsturidecodebin.c:384
 #, c-format
 msgid "Invalid URI \"%s\"."
 msgstr "Неправильний URI \"%s\"."
 
-#: gst/playback/gstplaybasebin.c:1585
 msgid "RTSP streams cannot be played yet."
 msgstr "Відтворення потоків RTSP поки-що не підтримується."
 
-#: gst/playback/gstplaybasebin.c:1915
 msgid "Could not create \"decodebin\" element."
 msgstr "Не вдається створити елемент \"decodebin\"."
 
-#: gst/playback/gstplaybasebin.c:2133 gst/playback/gsturidecodebin.c:798
 msgid "Source element is invalid."
 msgstr "Неправильний вхідний елемент."
 
-#: gst/playback/gstplaybasebin.c:2209
-msgid "Only a subtitle stream was detected. Either you are loading a subtitle file or some other type of text file, or the media file was not recognized."
-msgstr "Виявлено лише потік субтитрів. Або ви завантажили файл субтитрів чи інший текстовий файл, або носій не розпізнано."
+msgid ""
+"Only a subtitle stream was detected. Either you are loading a subtitle file "
+"or some other type of text file, or the media file was not recognized."
+msgstr ""
+"Виявлено лише потік субтитрів. Або ви завантажили файл субтитрів чи інший "
+"текстовий файл, або носій не розпізнано."
 
-#: gst/playback/gstplaybasebin.c:2214
-msgid "You do not have a decoder installed to handle this file. You might need to install the necessary plugins."
-msgstr "Не встановлено декодер для обробки цього файлу. Можливо потрібно встановити додаткові модулі."
+msgid ""
+"You do not have a decoder installed to handle this file. You might need to "
+"install the necessary plugins."
+msgstr ""
+"Не встановлено декодер для обробки цього файлу. Можливо потрібно встановити "
+"додаткові модулі."
 
-#: gst/playback/gstplaybasebin.c:2218
 msgid "This is not a media file"
 msgstr "Файл не є мультимедійним"
 
-#: gst/playback/gstplaybasebin.c:2223
 msgid "A subtitle stream was detected, but no video stream."
 msgstr "Виявлено потік субтитрів, с не відео-потік."
 
-#: gst/playback/gstplaybin.c:906
 msgid "Both autovideosink and xvimagesink elements are missing."
 msgstr "Відсутні елементи autovideosink та xvimagesink."
 
-#: gst/playback/gstplaybin.c:914 gst/playback/gstplaybin.c:924
-#: gst/playback/gstplaybin.c:1109 gst/playback/gstplaybin.c:1119
-#: gst/playback/gstplaybin.c:1250 gst/playback/gstplaybin.c:1259
-#: gst/playback/gstplaybin.c:1268
 #, c-format
 msgid "Missing element '%s' - check your GStreamer installation."
 msgstr "Відсутній елемент '%s' - перевірте встановлення GStreamer."
 
-#: gst/playback/gstplaybin.c:1102
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Відсутні елементи autoaudiosink та alsasink."
 
-#: gst/playback/gstqueue2.c:944
-msgid "No file name specified."
-msgstr "Не вказано назву файлу."
+#, fuzzy
+msgid "Both autovideosink and xvimagesink elements are not working."
+msgstr "Відсутні елементи autovideosink та xvimagesink."
 
-#: gst/playback/gstqueue2.c:950
+msgid "Custom text sink element is not usable."
+msgstr ""
+
+msgid "No volume control found"
+msgstr ""
+
+#, fuzzy
+msgid "Both autoaudiosink and alsasink elements are not working."
+msgstr "Відсутні елементи autoaudiosink та alsasink."
+
+msgid "Can't play a text file without video."
+msgstr ""
+
+msgid "Can't play a text subtitles and subpictures."
+msgstr ""
+
+#, fuzzy
+msgid "No Temp directory specified."
+msgstr "Пристрій не вказано."
+
+#, fuzzy, c-format
+msgid "Could not create temp file \"%s\"."
+msgstr "Не вдається закрити файл віртуальної файлової системи \"%s\"."
+
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Не вдається відкрити файл \"%s\" для читання."
 
-#: gst/playback/gsturidecodebin.c:205
 #, c-format
 msgid "No decoder available for type '%s'."
 msgstr "Для типу '%s' немає доступних декодерів."
 
-#: gst/playback/gsturidecodebin.c:390
 msgid "This stream type cannot be played yet."
 msgstr "Цей потік поки-що не може бути відтворений."
 
-#: gst/playback/gsturidecodebin.c:401
 #, c-format
 msgid "No URI handler implemented for \"%s\"."
 msgstr "Не реалізовано обробник URI для \"%s\"."
 
-#: gst/playback/gsturidecodebin.c:639
 msgid "Could not create \"decodebin2\" element."
 msgstr "Не вдається створити елемент \"decodebin2\"."
 
-#: gst/playback/gsturidecodebin.c:645
 msgid "Could not create \"queue2\" element."
 msgstr "Не вдається створити елемент \"queue2\"."
 
-#: gst/tcp/gsttcp.c:519 gst/tcp/gsttcpclientsink.c:270
+#, fuzzy
+msgid "Could not create \"typefind\" element."
+msgstr "Не вдається створити елемент \"decodebin\"."
+
 #, c-format
 msgid "Error while sending data to \"%s:%d\"."
 msgstr "Помилка при надсиланні даних до \"%s:%d\"."
 
-#: gst/tcp/gsttcp.c:571
 #, c-format
 msgid "Error while sending gdp header data to \"%s:%d\"."
 msgstr "Помилка при надсиланні заголовку gdp даних до \"%s:%d\"."
 
-#: gst/tcp/gsttcp.c:580
 #, c-format
 msgid "Error while sending gdp payload data to \"%s:%d\"."
 msgstr "Помилка при надсиланні даних gdp до \"%s:%d\"."
 
-#: gst/tcp/gsttcpclientsink.c:382 gst/tcp/gsttcpclientsrc.c:366
 #, c-format
 msgid "Connection to %s:%d refused."
 msgstr "У з'єднанні з %s:%d відмовлено."
 
-#: gst-libs/gst/audio/gstbaseaudiosrc.c:602
 msgid "Can't record audio fast enough"
 msgstr "Не вдається запис аудіоданих з потрібною швидкістю"
 
-#: gst-libs/gst/tag/tags.c:57
+msgid "Failed to read tag: not enough data"
+msgstr ""
+
 msgid "track ID"
 msgstr "ідентифікатор доріжки"
 
-#: gst-libs/gst/tag/tags.c:57
 msgid "MusicBrainz track ID"
 msgstr "Ідентифікатор доріжки у MusicBrainz"
 
-#: gst-libs/gst/tag/tags.c:59
 msgid "artist ID"
 msgstr "ідентифікатор виконавця"
 
-#: gst-libs/gst/tag/tags.c:59
 msgid "MusicBrainz artist ID"
 msgstr "Ідентифікатор виконавця у MusicBrainz"
 
-#: gst-libs/gst/tag/tags.c:61
 msgid "album ID"
 msgstr "ідентифікатор альбому"
 
-#: gst-libs/gst/tag/tags.c:61
 msgid "MusicBrainz album ID"
 msgstr "Ідентифікатор альбому у MusicBrainz"
 
-#: gst-libs/gst/tag/tags.c:64
 msgid "album artist ID"
 msgstr "ідентифікатор виконавця альбому"
 
-#: gst-libs/gst/tag/tags.c:64
 msgid "MusicBrainz album artist ID"
 msgstr "Ідентифікатор виконавця альбому у MusicBrainz"
 
-#: gst-libs/gst/tag/tags.c:66
 msgid "track TRM ID"
 msgstr "ідентифікатор доріжки TRM"
 
-#: gst-libs/gst/tag/tags.c:66
 msgid "MusicBrainz TRM ID"
 msgstr "Ідентифікатор доріжки TRM у MusicBrainz"
 
-#: gst-libs/gst/tag/tags.c:69
-msgid "artist sortname"
-msgstr "категорія виконавця"
-
-#: gst-libs/gst/tag/tags.c:69
-msgid "MusicBrainz artist sortname"
-msgstr "Категорія виконавця у MusicBrainz"
-
-#: gst-libs/gst/cdda/gstcddabasesrc.c:1385
-#: gst-libs/gst/cdda/gstcddabasesrc.c:1418
 msgid "This CD has no audio tracks"
 msgstr "На цьому компакт-диску немає аудіо доріжок"
 
-#: gst-libs/gst/pbutils/descriptions.c:90
+msgid "ID3 tag"
+msgstr ""
+
+msgid "APE tag"
+msgstr ""
+
+msgid "ICY internet radio"
+msgstr ""
+
 msgid "Apple Lossless Audio (ALAC)"
 msgstr "Аудіо без втрат від Apple (ALAC)"
 
-#: gst-libs/gst/pbutils/descriptions.c:98
 msgid "Free Lossless Audio Codec (FLAC)"
 msgstr "Вільний алгоритм аудіо без втрат (FLAC)"
 
-#: gst-libs/gst/pbutils/descriptions.c:121
-#: gst-libs/gst/pbutils/descriptions.c:122
 msgid "Lossless True Audio (TTA)"
 msgstr "Lossless True Audio (TTA)"
 
-#: gst-libs/gst/pbutils/descriptions.c:130
 msgid "Windows Media Speech"
 msgstr "Windows Media Speech"
 
-#: gst-libs/gst/pbutils/descriptions.c:144
 msgid "CYUV Lossless"
 msgstr "CYUV без втрат"
 
-#: gst-libs/gst/pbutils/descriptions.c:147
 msgid "FFMpeg v1"
 msgstr "FFMpeg v1"
 
-#: gst-libs/gst/pbutils/descriptions.c:159
 msgid "Lossless MSZH"
 msgstr "MSZH без втрат"
 
-#: gst-libs/gst/pbutils/descriptions.c:165
 msgid "Uncompressed Gray Image"
 msgstr "Нестиснене сіре зображення"
 
-#: gst-libs/gst/pbutils/descriptions.c:170
 msgid "Run-length encoding"
 msgstr "Кодування Run-length"
 
-#: gst-libs/gst/pbutils/descriptions.c:204
 msgid "Sami subtitle format"
 msgstr "Формат субтитрів Sami"
 
-#: gst-libs/gst/pbutils/descriptions.c:205
 msgid "TMPlayer subtitle format"
 msgstr "Формат субтитрів TMPlayer"
 
-#: gst-libs/gst/pbutils/descriptions.c:263
+#, fuzzy
+msgid "Kate subtitle format"
+msgstr "Формат субтитрів Sami"
+
 msgid "Uncompressed planar YUV 4:2:0"
 msgstr "Нестиснений планарний YUV 4:2:0"
 
-#: gst-libs/gst/pbutils/descriptions.c:266
 msgid "Uncompressed planar YVU 4:2:0"
 msgstr "Нестиснений планарний YVU 4:2:0"
 
-#: gst-libs/gst/pbutils/descriptions.c:269
-#: gst-libs/gst/pbutils/descriptions.c:279
 msgid "Uncompressed packed YUV 4:2:2"
 msgstr "Нестиснений пакетний YUV 4:2:2"
 
-#: gst-libs/gst/pbutils/descriptions.c:272
 msgid "Uncompressed packed YUV 4:1:0"
 msgstr "Нестиснений пакетний YUV 4:1:0"
 
-#: gst-libs/gst/pbutils/descriptions.c:275
 msgid "Uncompressed packed YVU 4:1:0"
 msgstr "Нестиснений пакетний YVU 4:1:0"
 
-#: gst-libs/gst/pbutils/descriptions.c:282
 msgid "Uncompressed packed YUV 4:1:1"
 msgstr "Нестиснений пакетний YUV 4:1:1"
 
-#: gst-libs/gst/pbutils/descriptions.c:285
 msgid "Uncompressed packed YUV 4:4:4"
 msgstr "Нестиснений пакетний YUV 4:4:4"
 
-#: gst-libs/gst/pbutils/descriptions.c:288
 msgid "Uncompressed planar YUV 4:2:2"
 msgstr "Нестиснений планарний YUV 4:2:2"
 
-#: gst-libs/gst/pbutils/descriptions.c:291
 msgid "Uncompressed planar YUV 4:1:1"
 msgstr "Нестиснений планарний YUV 4:1:1"
 
-#: gst-libs/gst/pbutils/descriptions.c:294
 msgid "Uncompressed black and white Y-plane"
 msgstr "Нестиснений чорно-білий Y-проекція"
 
-#: gst-libs/gst/pbutils/descriptions.c:297
 msgid "Uncompressed YUV"
 msgstr "Нестиснений YUV"
 
-#: gst-libs/gst/pbutils/descriptions.c:308
 #, c-format
 msgid "Uncompressed palettized %d-bit %s"
 msgstr "Нестиснений пакетний %d-біт %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:358
 #, c-format
 msgid "DivX MPEG-4 Version %d"
 msgstr "DivX MPEG-4 версії %d"
 
-#: gst-libs/gst/pbutils/descriptions.c:547
 #, c-format
 msgid "Raw %d-bit PCM audio"
 msgstr "Необроблений %d-біт PCM звук"
 
-#: gst-libs/gst/pbutils/descriptions.c:549
 msgid "Raw PCM audio"
 msgstr "Необроблений PCM звук"
 
-#: gst-libs/gst/pbutils/descriptions.c:555
 #, c-format
 msgid "Raw %d-bit floating-point audio"
 msgstr "Необроблений %d-біт звук з плаваючою комою"
 
-#: gst-libs/gst/pbutils/descriptions.c:557
 msgid "Raw floating-point audio"
 msgstr "Необроблений звук з плаваючою комою"
 
-#: gst-libs/gst/pbutils/descriptions.c:644
 msgid "Audio CD source"
 msgstr "Джерело аудіо-CD"
 
-#: gst-libs/gst/pbutils/descriptions.c:647
 msgid "DVD source"
 msgstr "Джерело DVD"
 
-#: gst-libs/gst/pbutils/descriptions.c:650
 msgid "Real Time Streaming Protocol (RTSP) source"
 msgstr "Джерело потокового протоколу реального часу (RTSP)"
 
-#: gst-libs/gst/pbutils/descriptions.c:654
 msgid "Microsoft Media Server (MMS) protocol source"
 msgstr "Джерело протоколу Microsoft Media Server (MMS)"
 
-#: gst-libs/gst/pbutils/descriptions.c:662
 #, c-format
 msgid "%s protocol source"
 msgstr "Джерело протоколу %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:730
 #, c-format
 msgid "%s video RTP depayloader"
 msgstr "RTP модуль розпаковування відеоданих %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:732
 #, c-format
 msgid "%s audio RTP depayloader"
 msgstr "RTP модуль розпаковування аудіоданих %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:734
 #, c-format
 msgid "%s RTP depayloader"
 msgstr "RTP модуль розпаковування даних %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:741
 #, c-format
 msgid "%s demuxer"
 msgstr "демультиплексор %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:743
 #, c-format
 msgid "%s decoder"
 msgstr "декодер %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:778
 #, c-format
 msgid "%s video RTP payloader"
 msgstr "RTP модуль запаковування відеоданих %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:780
 #, c-format
 msgid "%s audio RTP payloader"
 msgstr "RTP модуль запаковування аудіоданих %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:782
 #, c-format
 msgid "%s RTP payloader"
 msgstr "RTP модуль запаковування даних %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:789
 #, c-format
 msgid "%s muxer"
 msgstr "мультиплексор %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:791
 #, c-format
 msgid "%s encoder"
 msgstr "кодер %s"
 
-#: gst-libs/gst/pbutils/descriptions.c:822
 #, c-format
 msgid "GStreamer element %s"
 msgstr "Елемент GStreamer %s"
 
-#: gst-libs/gst/pbutils/missing-plugins.c:550
 msgid "Unknown source element"
 msgstr "Невідомий елемент джерела"
 
-#: gst-libs/gst/pbutils/missing-plugins.c:553
 msgid "Unknown sink element"
 msgstr "Невідомий елемент споживання"
 
-#: gst-libs/gst/pbutils/missing-plugins.c:556
 msgid "Unknown element"
 msgstr "Невідомий елемент"
 
-#: gst-libs/gst/pbutils/missing-plugins.c:559
 msgid "Unknown decoder element"
 msgstr "Невідомий елемент декодеру"
 
-#: gst-libs/gst/pbutils/missing-plugins.c:562
 msgid "Unknown encoder element"
 msgstr "Невідомий елемент кодеру"
 
-#: gst-libs/gst/pbutils/missing-plugins.c:567
 msgid "Plugin or element of unknown type"
 msgstr "Модуль або елемент невідомого типу"
 
-#: sys/v4l/v4l_calls.c:159
 msgid "No device specified."
 msgstr "Пристрій не вказано."
 
-#: sys/v4l/v4l_calls.c:168
 #, c-format
 msgid "Device \"%s\" does not exist."
 msgstr "Пристрій \"%s\" не існує."
 
-#: sys/v4l/v4l_calls.c:173
 #, c-format
 msgid "Device \"%s\" is already being used."
 msgstr "Пристрій \"%s\" вже використовується іншою програмою."
 
-#: sys/v4l/v4l_calls.c:178
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
 msgstr "Не вдається відкрити пристрій \"%s\" для читання чи запису."
+
+#~ msgid "No file name specified."
+#~ msgstr "Не вказано назву файлу."
+
+#~ msgid "artist sortname"
+#~ msgstr "категорія виконавця"
+
+#~ msgid "MusicBrainz artist sortname"
+#~ msgstr "Категорія виконавця у MusicBrainz"
